bgd/bgd-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bgd
  annotations:
    argocd.argoproj.io/sync-wave: "0"
  labels:
    argocd.argoproj.io/managed-by: argocd-gitops
