bgd/bgd-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  labels:
    app: bgd
  name: bgd
  namespace: bgd
spec:
  host: "bgd-bgd.apps.rishabhcluster.lab.upshift.rdu2.redhat.com"
  port:
    targetPort: 8080
  to:
    kind: Service
    name: bgd
    weight: 100
status: {}
